# Changelog
All notable changes to MCJS will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.1.3] - 2018-10-12
### Added
- Basic Minecraft selector utility

## [0.1.2] - 2018-10-12
### Added
- Initial MCJS version