@@ -5,6 +5,7 @@ const vm = require('vm')
 const EventEmitter = require('events')
 const requireProxy = require('./utils/requireProxy')
 const stringBuffer = require('./utils/stringBuffer')
+const fileBuffer = require('./utils/fileBuffer')
 const createMonitor = require('watch').createMonitor
 const MC = require('./mc')
 
@@ -14,12 +15,10 @@ MCJS.events = new EventEmitter()
 MCJS.read = function(mcjsInput, sandbox = {}, filepath = null) {
   sandbox.cmd = stringBuffer()
   sandbox.console = console
+  sandbox.raw = String.raw
   Object.assign(sandbox, MC)
   vm.runInNewContext(mcjsInput, sandbox, filepath)
-  let mcfOutput = sandbox.cmd()
-    .replace(/\s*[\n\r]+\s*/g, '\n')
-    .replace(/^[\n\r]+/, '')
-    .replace(/[\n\r]+$/, '')
+  let mcfOutput = sandbox.cmd.clean()
   return mcfOutput
 }
 
@@ -40,10 +39,24 @@ MCJS.compileFile = async function(inputpath, outputpath) {
     outputpath = inputpath.replace(/\.mcjs$/, '.mcfunction')
   }
   let fileMCJS = await aw.readFile(inputpath, 'utf8')
-  let sandbox = {require: requireProxy(path.dirname(inputpath))}
+  let sandbox = {}
+  sandbox.require = requireProxy(path.dirname(inputpath))
+  sandbox.mcfunction = fileBuffer('cmd')
+
+  let filePromises = []
 
   let mcfOutput = MCJS.read(fileMCJS, sandbox, inputpath)
-  await aw.writeFile(outputpath, mcfOutput)
+  filePromises.push(aw.writeFile(outputpath, mcfOutput))
+
+  let outputdir = path.dirname(outputpath)
+  let mcfunctions = sandbox.mcfunction()
+  for(let mcfName in mcfunctions) {
+    let mcfPath = path.resolve(outputdir, mcfName + '.mcfunction')
+    let mcfContent = mcfunctions[mcfName].content.clean()
+    filePromises.push(aw.writeFile(mcfPath, mcfContent))
+  }
+
+  await Promise.all(filePromises)
   MCJS.events.emit('compileFile', inputpath, outputpath)
 }
 
