@@ -1,6 +1,6 @@
 function stringBuffer() {
   let buffer = ''
-  return (...args) => {
+  let strBuffer = (...args) => {
     if(Array.isArray(args[0])) {
       buffer += String.raw(...args) + '\n'
     }
@@ -9,6 +9,13 @@ function stringBuffer() {
     }
     return buffer
   }
+
+  strBuffer.clean = () => buffer
+    .replace(/\s*[\n\r]+\s*/g, '\n')
+    .replace(/^[\n\r]+/, '')
+    .replace(/[\n\r]+$/, '')
+
+  return strBuffer
 }
 
 module.exports = stringBuffer
