@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [0.1.3] - 2018-10-12
 ### Added
 - Basic Minecraft selector utility
+- Ability to create multiple `.mcfunction` files using the `mcfunction` helper
 
 ## [0.1.2] - 2018-10-12
 ### Added
